start creating plots for presentation

--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData.ipynb
@@ -939,13 +939,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "SeaWiFS_raw <- read.csv(\"SatelliteData/MERGE/SeaWiFS_monthly_mean.csv\")\n",
     "\n",
-    "MODIS_raw <- read.csv(\"SatelliteData/MERGE/MODIS_monthly_mean.csv\")"
+    "MODIS_raw <- read.csv(\"SatelliteData/MERGE/MODIS_monthly_mean.csv\")\n",
+    "\n",
+    "SatCONCAT_raw <- read.csv(\"SatelliteData/MERGE/SatelliteCONCAT_monthly_mean.csv\")"
    ]
   },
   {
@@ -1020,13 +1022,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add time_month column to ctd ds\n",
     "SeaWiFS_raw$date = as.Date(SeaWiFS_raw$date, format=\"%Y-%m-%d\")\n",
     "MODIS_raw$date = as.Date(MODIS_raw$date, format=\"%Y-%m-%d\")\n",
+    "SatCONCAT_raw$date = as.Date(SatCONCAT_raw$date, format=\"%Y-%m-%d\")\n",
     "\n",
     "SeaWiFS_month <- SeaWiFS_raw %>%\n",
     "  mutate(time_month = format(date, format = \"%m-%Y\"), SeaWiFS_chla=value) %>%\n",
@@ -1034,7 +1037,11 @@
     "\n",
     "MODIS_month <- MODIS_raw %>%\n",
     "  mutate(time_month = format(date, format = \"%m-%Y\"), MODIS_chla=value) %>%\n",
-    "    select(time_month, MODIS_chla)"
+    "    select(time_month, MODIS_chla)\n",
+    "\n",
+    "SatCONCAT_month <- SatCONCAT_raw %>%\n",
+    "  mutate(time_month = format(date, format = \"%m-%Y\"), Satellite_chla=value) %>%\n",
+    "    select(time_month, Satellite_chla)"
    ]
   },
   {
@@ -1072,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,23 +1092,24 @@
     "                           phyto_cleaned,\n",
     "                           zoo_ds_month_cleaned,\n",
     "                           SeaWiFS_month,\n",
-    "                           MODIS_month\n",
+    "                           MODIS_month,\n",
+    "                           SatCONCAT_month\n",
     "                          ) %>% \n",
     "  reduce(left_join, by = c(\"time_month\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CARIACO_dat_joined_truncated <- CARIACO_dat_joined[203:458,]"
+    "CARIACO_dat_joined_truncated <- CARIACO_dat_joined[203:500,]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,6 +1122,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "500"
+      ],
+      "text/latex": [
+       "500"
+      ],
+      "text/markdown": [
+       "500"
+      ],
+      "text/plain": [
+       "[1] 500"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#length(CARIACO_dat_joined$time_month)"
+   ]
   },
   {
    "cell_type": "code",
