data clean up - January 2022

--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/CTDCalcSSTMLD.R.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/CTDCalcSSTMLD.R.ipynb
@@ -2,24 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading required package: dplyr\n",
+      "Loading required package: tidyverse\n",
       "\n",
-      "Loading required package: oce\n",
+      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘oce’”\n"
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.3     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.3     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.0.0     \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "require(dplyr, warn.conflicts = FALSE)\n",
+    "require(tidyverse, warn.conflicts = FALSE)\n",
     "#require(cowplot, warn.conflicts = FALSE)\n",
     "require(oce, warn.conflicts = FALSE)"
    ]
@@ -42,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctd$DATE <- paste(ctd$Year,'-',ctd$Month,'-',ctd$Day, sep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +78,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'unlimited'</li><li>'cruise_no'</li><li>'Cruise_ID1'</li><li>'Cruise_ID2'</li><li>'Year'</li><li>'Month'</li><li>'Day'</li><li>'Date'</li><li>'Latitude'</li><li>'Longitude'</li><li>'press'</li><li>'depth'</li><li>'temp'</li><li>'sal'</li><li>'potemp'</li><li>'sigma_t'</li><li>'sigma_0'</li><li>'O2_ml_L'</li><li>'beam_cp'</li><li>'beam_att'</li><li>'fluor_CTD'</li><li>'fluor_chla'</li></ol>\n"
+       "<ol class=list-inline><li>'unlimited'</li><li>'cruise_no'</li><li>'Cruise_ID1'</li><li>'Cruise_ID2'</li><li>'Year'</li><li>'Month'</li><li>'Day'</li><li>'Date'</li><li>'Latitude'</li><li>'Longitude'</li><li>'press'</li><li>'depth'</li><li>'temp'</li><li>'sal'</li><li>'potemp'</li><li>'sigma_t'</li><li>'sigma_0'</li><li>'O2_ml_L'</li><li>'beam_cp'</li><li>'beam_att'</li><li>'fluor_CTD'</li><li>'fluor_chla'</li><li>'DATE'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -88,6 +104,7 @@
        "\\item 'beam\\_att'\n",
        "\\item 'fluor\\_CTD'\n",
        "\\item 'fluor\\_chla'\n",
+       "\\item 'DATE'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
@@ -113,6 +130,7 @@
        "20. 'beam_att'\n",
        "21. 'fluor_CTD'\n",
        "22. 'fluor_chla'\n",
+       "23. 'DATE'\n",
        "\n",
        "\n"
       ],
@@ -121,7 +139,7 @@
        " [6] \"Month\"      \"Day\"        \"Date\"       \"Latitude\"   \"Longitude\" \n",
        "[11] \"press\"      \"depth\"      \"temp\"       \"sal\"        \"potemp\"    \n",
        "[16] \"sigma_t\"    \"sigma_0\"    \"O2_ml_L\"    \"beam_cp\"    \"beam_att\"  \n",
-       "[21] \"fluor_CTD\"  \"fluor_chla\""
+       "[21] \"fluor_CTD\"  \"fluor_chla\" \"DATE\"      "
       ]
      },
      "metadata": {},
@@ -17628,6 +17646,371 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# interpolate niskin_ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to read specific verfication type from dataset\n",
+    "\n",
+    "prepdataframe <- function(variable='', df){\n",
+    "\n",
+    "    DF <- df\n",
+    "    DF$date <- as.Date(DF$DATE, format=\"%Y-%m-%d\")\n",
+    "    #print(names(DF))\n",
+    "        \n",
+    "    VarDF <- DF %>%\n",
+    "      select(date, all_of(variable), depth) %>%\n",
+    "      gather(key='key',value = \"value\", -date, -depth)\n",
+    "    #head(VarDF)\n",
+    "    \n",
+    "    return(VarDF)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#prepdataframe(\"temp\", ctd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Interpolate\n",
+    "interpolateDF <- function(DF,func='oce-rr'){\n",
+    "    zz <- seq(0, 200, 1)\n",
+    "    \n",
+    "    if(func=='linear'){\n",
+    "        IntDF <- DF %>%\n",
+    "            group_by(date) %>%\n",
+    "            filter(sum(!is.na(value))>1) %>%\n",
+    "            do(data.frame(value_int = with(.,approx(depth, value, zz)), depth = zz)) \n",
+    "        \n",
+    "        IntDF <- IntDF %>% \n",
+    "              rename(\n",
+    "                value_int = value_int.y\n",
+    "                )\n",
+    "        IntDF$value_int.x <- NULL\n",
+    "        }\n",
+    "    \n",
+    "    else if(func=='oce-rr'){\n",
+    "        IntDF <- DF %>%\n",
+    "            group_by(date) %>%\n",
+    "            do(data.frame(value_int = with(.,oceApprox(depth, value, zz, \"rr\")), depth = zz)) \n",
+    "        }\n",
+    "    \n",
+    "    return(IntDF)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GET 21° ISOTHERM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctd_temp_int = interpolateDF(prepdataframe(\"temp\", ctd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#str(ctd_temp_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iso21_depth <- ctd_temp_int %>%\n",
+    "    group_by(date) %>%\n",
+    "    filter(depth > 6) %>%\n",
+    "    mutate(iso21 = value_int < 21) %>% # create new column that gives \"True\" for values at MLD\n",
+    "    filter(iso21 == T) %>% # only take \"True\" values \n",
+    "    slice(1) # takes the first occurrence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "229"
+      ],
+      "text/latex": [
+       "229"
+      ],
+      "text/markdown": [
+       "229"
+      ],
+      "text/plain": [
+       "[1] 229"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "length(iso21_depth$value_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iso21_df <- iso21_depth %>%\n",
+    "    rename(Isotherm_21 = depth) %>%\n",
+    "    select(date, Isotherm_21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iso21_df <- write csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# GET MLD from Sigma T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctd_sigma_t_int = interpolateDF(prepdataframe(\"sigma_t\", ctd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A grouped_df: 6 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>date</th><th scope=col>sigma_t</th><th scope=col>sigma_t_diff</th><th scope=col>depth</th></tr>\n",
+       "\t<tr><th scope=col>&lt;date&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1995-11-08</td><td>      NA</td><td>         NA</td><td>0</td></tr>\n",
+       "\t<tr><td>1995-11-08</td><td>      NA</td><td>         NA</td><td>1</td></tr>\n",
+       "\t<tr><td>1995-11-08</td><td>23.76400</td><td>         NA</td><td>2</td></tr>\n",
+       "\t<tr><td>1995-11-08</td><td>23.76950</td><td>0.005500000</td><td>3</td></tr>\n",
+       "\t<tr><td>1995-11-08</td><td>23.77500</td><td>0.005500000</td><td>4</td></tr>\n",
+       "\t<tr><td>1995-11-08</td><td>23.77895</td><td>0.003947205</td><td>5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 6 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " date & sigma\\_t & sigma\\_t\\_diff & depth\\\\\n",
+       " <date> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1995-11-08 &       NA &          NA & 0\\\\\n",
+       "\t 1995-11-08 &       NA &          NA & 1\\\\\n",
+       "\t 1995-11-08 & 23.76400 &          NA & 2\\\\\n",
+       "\t 1995-11-08 & 23.76950 & 0.005500000 & 3\\\\\n",
+       "\t 1995-11-08 & 23.77500 & 0.005500000 & 4\\\\\n",
+       "\t 1995-11-08 & 23.77895 & 0.003947205 & 5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 6 × 4\n",
+       "\n",
+       "| date &lt;date&gt; | sigma_t &lt;dbl&gt; | sigma_t_diff &lt;dbl&gt; | depth &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| 1995-11-08 |       NA |          NA | 0 |\n",
+       "| 1995-11-08 |       NA |          NA | 1 |\n",
+       "| 1995-11-08 | 23.76400 |          NA | 2 |\n",
+       "| 1995-11-08 | 23.76950 | 0.005500000 | 3 |\n",
+       "| 1995-11-08 | 23.77500 | 0.005500000 | 4 |\n",
+       "| 1995-11-08 | 23.77895 | 0.003947205 | 5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  date       sigma_t  sigma_t_diff depth\n",
+       "1 1995-11-08       NA          NA  0    \n",
+       "2 1995-11-08       NA          NA  1    \n",
+       "3 1995-11-08 23.76400          NA  2    \n",
+       "4 1995-11-08 23.76950 0.005500000  3    \n",
+       "5 1995-11-08 23.77500 0.005500000  4    \n",
+       "6 1995-11-08 23.77895 0.003947205  5    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ctd_sigma_t_diff <- ctd_sigma_t_int %>%\n",
+    "    group_by(date) %>%\n",
+    "    do(data.frame( sigma_t = .$value_int, sigma_t_diff = c(NA,diff(.$value_int)), depth = .$depth))\n",
+    "\n",
+    "head(ctd_sigma_t_diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mld_depth <- ctd_sigma_t_diff %>%\n",
+    "    group_by(date) %>%\n",
+    "    filter(depth > 9) %>%\n",
+    "    mutate(mld = sigma_t_diff >= 0.125 | sigma_t_diff <= -0.125) %>% # create new column that gives \"True\" for values at MLD\n",
+    "    filter(mld == T) %>% # only take \"True\" values \n",
+    "    slice(1) # takes the first occurrence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mld_depth_2 <- ctd_sigma_t_diff %>%\n",
+    "    group_by(date) %>%\n",
+    "    filter(depth > 9) %>%\n",
+    "    mutate(mld = sigma_t >= sigma_t[1]+0.2 | sigma_t <= sigma_t[1]-0.2) %>% # create new column that gives \"True\" for values at MLD\n",
+    "    filter(mld == T) %>% # only take \"True\" values \n",
+    "    slice(1) # takes the first occurrence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mld_df <- mld_depth_2 %>%\n",
+    "    rename(MLD = depth) %>%\n",
+    "    select(date, MLD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CTD_combined_data <- list(iso21_df, mld_df) %>% \n",
+    "  reduce(left_join, by = \"date\")\n",
+    "\n",
+    "write.csv(CTD_combined_data, \"../DATA/January/CTD_Isotherm21_MLD.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -17711,10 +18094,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "mld_depth <- ctd %>%\n",
     "  group_by(Cruise_ID2) %>% # this groups it by the run number \n",
@@ -17723,6 +18104,19 @@
     "  filter(belowmld == T) %>% # only take \"True\" values \n",
     "  slice(1) %>% # takes the first occurrence\n",
     "  ungroup() #removes grouping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctd_potemp_diff <- ctd_potemp_int %>%\n",
+    "    group_by(Date) %>%\n",
+    "    do(data.frame( potemp_int = .$potemp_int, potemp_diff = c(NA,diff(.$potemp_int)), depth = .$depth))\n",
+    "\n",
+    "head(ctd_potemp_diff)"
    ]
   },
   {
@@ -18235,20 +18629,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iso21_depth <- ctd_diff %>%\n",
-    "    group_by(Date) %>%\n",
-    "    filter(depth > 6) %>%\n",
-    "    mutate(iso21 = temp_int <= 21) %>% # create new column that gives \"True\" for values at MLD\n",
-    "    filter(iso21 == T) %>% # only take \"True\" values \n",
-    "    slice(1) # takes the first occurrence"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -18515,21 +18895,6 @@
     "iso21_df\n",
     "    \n",
     "mld_depth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iso21_df <- iso21_depth %>%\n",
-    "    rename(Isopycnal_21 = depth, date = Date) %>%\n",
-    "    select(date, Isopycnal_21)\n",
-    "    \n",
-    "mld_df <- mld_depth %>%\n",
-    "    rename(MLD_potemp = depth, date = Date) %>%\n",
-    "    select(date, MLD_potemp)"
    ]
   },
   {
