--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/NiskinCHECKdepthresolvedDATA.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/NiskinCHECKdepthresolvedDATA.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -380,11 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpolateNiskin <- function(var, int_func='linear', depth_to=101, depth_from=0, noofNA=20){\n",
+    "interpolateNiskin <- function(var, int_func='linear', depth_to=100, depth_from=0, noofNA=20){\n",
     " \n",
     "    niskin_dat <- prepdataframe(var)\n",
     "    \n",
@@ -395,7 +395,7 @@
     "    \n",
     "    niskin_sum <- niskin_int %>%\n",
     "        group_by(date) %>%\n",
-    "        filter(depth_from<=depth & depth<depth_to) %>%\n",
+    "        filter(depth_from<=depth & depth<=depth_to) %>%\n",
     "        filter(sum(is.na(value_int))<noofNA) %>%\n",
     "        summarize(value_sum = sum(value_int, na.rm=TRUE), \n",
     "                  var = mean(value_int, na.rm=TRUE),\n",
@@ -408,6 +408,15 @@
     "    \n",
     "    return(niskin_sum_monthly)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#interpolateNiskin('Chlorophyll', 'oce-rr', depth_to=100, noofNA=20)"
    ]
   },
   {
@@ -436,30 +445,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
+    "require(purrr)\n",
+    "require(dplyr)\n",
+    "\n",
     "niskin_temp_store = list()\n",
     "\n",
     "for (variable in niskin_numeric) {\n",
     "    #print(variable)\n",
     "    dat <- interpolateNiskin(variable, 'oce-rr')\n",
+    "    #print(tail(dat))\n",
     "    niskin_temp_store[[variable]] <- data.frame(dat_var = dat$var, time_month = dat$time_month)\n",
     "    names(niskin_temp_store[[variable]])[1] <- variable\n",
-    "    #print(head(niskin_temp_store[[variable]]))\n",
+    "    #print(tail(niskin_temp_store[[variable]]))\n",
     "}\n",
     "\n",
     "niskin_intrp_100m <- niskin_temp_store %>% \n",
-    "    reduce(left_join, by = \"time_month\")"
+    "    reduce(full_join, by = \"time_month\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t229 obs. of  16 variables:\n",
+      " $ NO3_UDO            : num  0.881 3.092 7.534 6.834 6.538 ...\n",
+      " $ time_month         : chr  \"11-1995\" \"12-1995\" \"01-1996\" \"02-1996\" ...\n",
+      " $ PO4_UDO            : num  0.0594 0.2094 0.3027 0.3221 0.3329 ...\n",
+      " $ SiO4_UDO           : num  2.12 3.86 4.86 4.05 5.15 ...\n",
+      " $ NH4_USF            : num  NA NA NA NA NA NA NA NA NA NA ...\n",
+      " $ NO2_USF            : num  NA NA NA NA NA NA NA NA NA NA ...\n",
+      " $ NO3_NO2_USF        : num  NA NA NA NA NA NA NA NA NA NA ...\n",
+      " $ PO4_USF            : num  NA NA NA NA NA NA NA NA NA NA ...\n",
+      " $ SiO4_USF           : num  NA NA NA NA NA NA NA NA NA NA ...\n",
+      " $ pH_corrected       : num  NA 8.01 7.99 7.96 NA ...\n",
+      " $ Salinity_bottles   : num  36.8 NA 36.9 36.9 36.8 ...\n",
+      " $ Temperature        : num  25.3 23.7 22.6 22.3 21.1 ...\n",
+      " $ Sigma_t            : num  24.6 25.1 25.5 25.6 25.8 ...\n",
+      " $ PrimaryProductivity: num  NA 0.451 1.976 1.111 1.513 ...\n",
+      " $ Chlorophyll        : num  0.166 0.111 0.559 0.341 0.623 ...\n",
+      " $ Phaeopigments      : num  0.249 0.156 0.334 0.28 0.376 ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "str(niskin_intrp_100m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
+    "require(purrr)\n",
+    "require(dplyr)\n",
+    "\n",
     "niskin_temp_store = list()\n",
     "\n",
     "for (variable in niskin_numeric) {\n",
@@ -471,12 +520,12 @@
     "}\n",
     "\n",
     "niskin_intrp_35m <- niskin_temp_store %>% \n",
-    "    reduce(left_join, by = \"time_month\")"
+    "    reduce(full_join, by = \"time_month\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +540,7 @@
     "}\n",
     "\n",
     "niskin_intrp_35m_to100m <- niskin_temp_store %>% \n",
-    "    reduce(left_join, by = \"time_month\")"
+    "    reduce(full_join, by = \"time_month\")"
    ]
   },
   {
@@ -574,7 +623,7 @@
    "outputs": [],
    "source": [
     "niskin_intrp_wDATE <- niskin_temp_store %>% \n",
-    "    reduce(left_join, by = \"date\")"
+    "    reduce(full_join, by = \"date\")"
    ]
   },
   {
@@ -1121,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
