new time series plots

--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData_V2.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData_V2.ipynb
@@ -272,6 +272,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "niskin_ds_35m <- read.csv(\"DATA/January/Niskin_qchecked_35m.csv\")\n",
+    "\n",
+    "# rename cols to separate\n",
+    "colnames(niskin_ds_35m)<-paste(colnames(niskin_ds_35m),\"35m\",sep=\"_\")\n",
+    "\n",
+    "niskin_ds_cleaned_35m <- niskin_ds_35m %>%\n",
+    " mutate(time_month = time_month_35m) %>%\n",
+    "    select(-X_35m, -time_month_35m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "niskin_ds_35to100m <- read.csv(\"DATA/January/Niskin_qchecked_35to100m.csv\")\n",
+    "\n",
+    "# rename cols to separate\n",
+    "colnames(niskin_ds_35to100m)<-paste(colnames(niskin_ds_35to100m),\"35to100m\",sep=\"_\")\n",
+    "\n",
+    "niskin_ds_cleaned_35to100m <- niskin_ds_35to100m %>%\n",
+    " mutate(time_month = time_month_35to100m) %>%\n",
+    "    select(-X_35to100m, -time_month_35to100m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'NO3_UDO_35m'</li><li>'PO4_UDO_35m'</li><li>'SiO4_UDO_35m'</li><li>'NH4_USF_35m'</li><li>'NO2_USF_35m'</li><li>'NO3_NO2_USF_35m'</li><li>'PO4_USF_35m'</li><li>'SiO4_USF_35m'</li><li>'pH_corrected_35m'</li><li>'Salinity_bottles_35m'</li><li>'Temperature_35m'</li><li>'Sigma_t_35m'</li><li>'PrimaryProductivity_35m'</li><li>'Chlorophyll_35m'</li><li>'Phaeopigments_35m'</li><li>'NO3_USF_35m'</li><li>'time_month'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'NO3\\_UDO\\_35m'\n",
+       "\\item 'PO4\\_UDO\\_35m'\n",
+       "\\item 'SiO4\\_UDO\\_35m'\n",
+       "\\item 'NH4\\_USF\\_35m'\n",
+       "\\item 'NO2\\_USF\\_35m'\n",
+       "\\item 'NO3\\_NO2\\_USF\\_35m'\n",
+       "\\item 'PO4\\_USF\\_35m'\n",
+       "\\item 'SiO4\\_USF\\_35m'\n",
+       "\\item 'pH\\_corrected\\_35m'\n",
+       "\\item 'Salinity\\_bottles\\_35m'\n",
+       "\\item 'Temperature\\_35m'\n",
+       "\\item 'Sigma\\_t\\_35m'\n",
+       "\\item 'PrimaryProductivity\\_35m'\n",
+       "\\item 'Chlorophyll\\_35m'\n",
+       "\\item 'Phaeopigments\\_35m'\n",
+       "\\item 'NO3\\_USF\\_35m'\n",
+       "\\item 'time\\_month'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'NO3_UDO_35m'\n",
+       "2. 'PO4_UDO_35m'\n",
+       "3. 'SiO4_UDO_35m'\n",
+       "4. 'NH4_USF_35m'\n",
+       "5. 'NO2_USF_35m'\n",
+       "6. 'NO3_NO2_USF_35m'\n",
+       "7. 'PO4_USF_35m'\n",
+       "8. 'SiO4_USF_35m'\n",
+       "9. 'pH_corrected_35m'\n",
+       "10. 'Salinity_bottles_35m'\n",
+       "11. 'Temperature_35m'\n",
+       "12. 'Sigma_t_35m'\n",
+       "13. 'PrimaryProductivity_35m'\n",
+       "14. 'Chlorophyll_35m'\n",
+       "15. 'Phaeopigments_35m'\n",
+       "16. 'NO3_USF_35m'\n",
+       "17. 'time_month'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"NO3_UDO_35m\"             \"PO4_UDO_35m\"            \n",
+       " [3] \"SiO4_UDO_35m\"            \"NH4_USF_35m\"            \n",
+       " [5] \"NO2_USF_35m\"             \"NO3_NO2_USF_35m\"        \n",
+       " [7] \"PO4_USF_35m\"             \"SiO4_USF_35m\"           \n",
+       " [9] \"pH_corrected_35m\"        \"Salinity_bottles_35m\"   \n",
+       "[11] \"Temperature_35m\"         \"Sigma_t_35m\"            \n",
+       "[13] \"PrimaryProductivity_35m\" \"Chlorophyll_35m\"        \n",
+       "[15] \"Phaeopigments_35m\"       \"NO3_USF_35m\"            \n",
+       "[17] \"time_month\"             "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names(niskin_ds_cleaned_35m)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -287,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,6 +895,8 @@
     "\n",
     "CARIACO_dat_joined <- list(wind_ds_cleaned, \n",
     "                           niskin_ds_cleaned, \n",
+    "                           niskin_ds_cleaned_35m,\n",
+    "                           niskin_ds_cleaned_35to100m,\n",
     "                           ctd_ds_month_cleaned, \n",
     "                           HPLC_phyto_ds_month,\n",
     "                           zoo_ds_month_cleaned,\n",
@@ -798,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,11 +965,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(CARIACO_dat_joined_truncated, \"DATA/January/Combined_CARIACO_data_v4.csv\")"
+    "write.csv(CARIACO_dat_joined_truncated, \"DATA/January/Combined_CARIACO_data_v5.csv\")"
    ]
   },
   {
